<resources>
    <string name="app_name">FragApp</string>
    <string name="title_activity_person_viewer">PersonViewer</string>
    <string name="nombre_de_prueba">Nombre de prueba</string>
    <string name="correo_de_prueba">Correo de prueba</string>
    <string name="carrera_de_pueba">Carrera de pueba</string>
    <string name="text_share_button">Compartir</string>
    <string name="text_career">Carrera:</string>
    <string name="text_mail">Correo Electronico:</string>
    <string name="text_name">Nombre:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
