<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@id/empty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/person_image"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/empty" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

    </LinearLayout>  <!-- Profile Photo -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="20sp"
                android:text="@string/text_name"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="#000"
                android:textSize="17sp"
                android:text="@string/nombre_de_prueba"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="20sp"
                android:text="@string/text_mail"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/text_view_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="17sp"
                android:layout_margin="8dp"
                android:text="@string/correo_de_prueba"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="20sp"
                android:text="@string/text_career"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/text_view_career"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="17sp"
                android:layout_margin="8dp"
                android:text="@string/carrera_de_pueba"
                android:gravity="center"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                />

        </LinearLayout>
    </ScrollView>

     <!-- Body -->
</LinearLayout>